# python_script_kiddie

./: LICENSE  README.md  pyproject.toml
data_analysis/: netflix.ipynb
my_python_baby/: M1Lab1.ipynb  M3Lab3.ipynb  M4Assignment.ipynb  M4Lab1.ipynb  M4Lab2.ipynb
python_baby/: M1Assignment.ipynb  M1Lab1.ipynb  M1Lab2.ipynb  M2Assignment.ipynb  M2Lab1.ipynb  M2Lab2.ipynb  M2Lab3.ipynb  M3Assignment.ipynb  M3Lab1.ipynb  M3Lab2.ipynb  M3Lab3.ipynb
