[tool.poetry]
name = "python_script_kiddie"
version = "0.1.0"
description = ""
authors = ["Erica Madebeykin <erica.madebeykina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
jupyter = "^1.0.0"
facebook-business = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
